--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    package="com.example.diceroller">
+    package="com.example.deeplinker">
 
     <application
         android:allowBackup="true"
@@ -10,8 +10,8 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
-        android:supportsRtl="true"
-        android:theme="@style/Theme.DiceRoller"
+        android:supportsRtl="false"
+        android:theme="@style/Theme.Deeplinker"
         tools:targetApi="31">
         <activity
             android:name="com.package.deeplinker.MainActivity"
